shaded jar with nashorn